test/fail_compilation/fail256.d
auto s = "foo"d ~ "bar"c;
